{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 95,
  "lineage": "516f0128-9617-0c08-463c-4142aea4f23d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:925438610009:instance/i-0a826570635f26d5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a826570635f26d5a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bootcamp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f9a59640baddef5",
            "private_dns": "ip-192-168-20-205.ec2.internal",
            "private_ip": "192.168.20.205",
            "public_ip": "52.91.255.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e7d75cae1e205d7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a6c78a67d08f590",
            "tags": {
              "Name": "bootcamp_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01439f0e0b4c5bc1f",
              "sg-01de4247fb16b0cb4",
              "sg-0631e94961580c9f9",
              "sg-0e3ce2041b0ec07d2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:925438610009:instance/i-0b223f5dc04295845",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b223f5dc04295845",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bootcamp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061d52c64e3ee4dd2",
            "private_dns": "ip-192-168-21-100.ec2.internal",
            "private_ip": "192.168.21.100",
            "public_ip": "52.4.156.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c63cf593d8cf445e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d57e05313ec571",
            "tags": {
              "Name": "bootcamp_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01439f0e0b4c5bc1f",
              "sg-01de4247fb16b0cb4",
              "sg-0631e94961580c9f9",
              "sg-0e3ce2041b0ec07d2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:925438610009:instance/i-081ef350ee488368e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081ef350ee488368e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bootcamp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bdb14adcbb23fe6",
            "private_dns": "ip-192-168-22-101.ec2.internal",
            "private_ip": "192.168.22.101",
            "public_ip": "34.201.170.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02ca7375859f9dd73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a66895dcdd1d77e",
            "tags": {
              "Name": "bootcamp_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01439f0e0b4c5bc1f",
              "sg-01de4247fb16b0cb4",
              "sg-0631e94961580c9f9",
              "sg-0e3ce2041b0ec07d2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:internet-gateway/igw-03fc277a3596eb364",
            "id": "igw-03fc277a3596eb364",
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_igw"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:loadbalancer/app/bootcamp-alb/a68fda709c25225c",
            "arn_suffix": "app/bootcamp-alb/a68fda709c25225c",
            "dns_name": "bootcamp-alb-335168917.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:loadbalancer/app/bootcamp-alb/a68fda709c25225c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bootcamp-alb",
            "security_groups": [
              "sg-01439f0e0b4c5bc1f",
              "sg-0695aa498a2b1d030"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a6c78a67d08f590"
              },
              {
                "subnet_id": "subnet-04a66895dcdd1d77e"
              },
              {
                "subnet_id": "subnet-0c4d57e05313ec571"
              }
            ],
            "subnets": [
              "subnet-02a6c78a67d08f590",
              "subnet-04a66895dcdd1d77e",
              "subnet-0c4d57e05313ec571"
            ],
            "tags": {
              "Name": "bootcamp-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-012da98d88bc30881",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:listener/app/bootcamp-alb/a68fda709c25225c/45f7fe730a1f4401",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:listener/app/bootcamp-alb/a68fda709c25225c/45f7fe730a1f4401",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:loadbalancer/app/bootcamp-alb/a68fda709c25225c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "arn_suffix": "targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "bootcp20200727194819277000000001",
            "name_prefix": "bootcp",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bootcp"
            },
            "target_type": "instance",
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.alb.aws_lb.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_group_attachment",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb-20200727194819867700000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "target_id": "i-0a826570635f26d5a"
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb-20200727194819835600000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "target_id": "i-0b223f5dc04295845"
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb-20200727194819814800000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:925438610009:targetgroup/bootcp20200727194819277000000001/6e1361c2d8891ccb",
            "target_id": "i-081ef350ee488368e"
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_security_group.allow_app",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.bootcamp",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.rds.module.db_instance.aws_db_instance.this",
            "module.rds.module.db_instance.aws_db_instance.this_mssql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b0558e24cbce1572",
            "owner_id": "925438610009",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fc277a3596eb364",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp_route_igw"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b45ca3f610859142",
            "route_table_id": "rtb-0b0558e24cbce1572",
            "subnet_id": "subnet-02a6c78a67d08f590"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public",
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dbb43a3fe4d2dea",
            "route_table_id": "rtb-0b0558e24cbce1572",
            "subnet_id": "subnet-0c4d57e05313ec571"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public",
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0660bb88e868c7988",
            "route_table_id": "rtb-0b0558e24cbce1572",
            "subnet_id": "subnet-04a66895dcdd1d77e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public",
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:security-group/sg-01439f0e0b4c5bc1f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01439f0e0b4c5bc1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "bootcamp_allow_app",
            "name_prefix": null,
            "owner_id": "925438610009",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:security-group/sg-0e3ce2041b0ec07d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3ce2041b0ec07d2",
            "ingress": [],
            "name": "bootcamp_allow_outbound",
            "name_prefix": null,
            "owner_id": "925438610009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp_allow_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:security-group/sg-01de4247fb16b0cb4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01de4247fb16b0cb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bootcamp_allow_ssh",
            "name_prefix": null,
            "owner_id": "925438610009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp_allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:security-group/sg-0631e94961580c9f9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0631e94961580c9f9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "bootcamp_database",
            "name_prefix": null,
            "owner_id": "925438610009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:security-group/sg-0695aa498a2b1d030",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01439f0e0b4c5bc1f"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0695aa498a2b1d030",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp_load_balancer",
            "name_prefix": null,
            "owner_id": "925438610009",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_security_group.allow_app",
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-044274e2f61c8c3bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-044274e2f61c8c3bc",
            "map_public_ip_on_launch": false,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_private_subnet_0"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-0292bf3e6d4b09af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-0292bf3e6d4b09af9",
            "map_public_ip_on_launch": false,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_private_subnet_1"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-0db56b11f6996dc3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.12.0/24",
            "id": "subnet-0db56b11f6996dc3f",
            "map_public_ip_on_launch": false,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_private_subnet_2"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-02a6c78a67d08f590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.20.0/24",
            "id": "subnet-02a6c78a67d08f590",
            "map_public_ip_on_launch": true,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_public_subnet_0"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-0c4d57e05313ec571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.21.0/24",
            "id": "subnet-0c4d57e05313ec571",
            "map_public_ip_on_launch": true,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_public_subnet_1"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:subnet/subnet-04a66895dcdd1d77e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.22.0/24",
            "id": "subnet-04a66895dcdd1d77e",
            "map_public_ip_on_launch": true,
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp_public_subnet_2"
            },
            "vpc_id": "vpc-012da98d88bc30881"
          },
          "dependencies": [
            "aws_vpc.bootcamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bootcamp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925438610009:vpc/vpc-012da98d88bc30881",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03319be53d66869e3",
            "default_route_table_id": "rtb-03ae700a93eceb9aa",
            "default_security_group_id": "sg-09ae237467e8751a0",
            "dhcp_options_id": "dopt-6b03e411",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-012da98d88bc30881",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ae700a93eceb9aa",
            "owner_id": "925438610009",
            "tags": {
              "Name": "bootcamp"
            }
          }
        }
      ]
    }
  ]
}